[package]
name = "wicket-core"
version = "0.1.0"
edition = "2021"

[dependencies]
wicket-util = { path = "../wicket-util/"}
wicket-request = { path = "../wicket-request/"}
wicket-macro = { path = "../wicket-macro/"}

bitflags = "2.10.0"
encoding_rs = "0.8.35"
once_cell = "1.21.3"
thiserror.workspace = true
smallvec = "1.15.1"
