[package]
name = "wicket-core"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.10.0"
bytes = "1.11.1"
encoding_rs = "0.8.35"
http = "1.4.0"
inventory = "0.3.24"
once_cell = "1.21.3"
smallvec = "1.15.1"
thiserror.workspace = true
url = "2.5.8"

wicket-macro = { path = "../wicket-macro/"}
wicket-util = { path = "../wicket-util/"}

