[package]
name = "wicket-core"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.10.0"
bytes = "1.11.1"
cookie = "0.18.1"
dashmap = "6.1.0"
encoding_rs = "0.8.35"
http = "1.4.0"
inventory = "0.3.24"
once_cell = "1.21.3"
rand = "0.10.1"
smallvec = "1.15.1"
thiserror.workspace = true
tokio = {version = "1.52.2", features =["sync", "rt"]} 
url = "2.5.8"

wicket-macro = { path = "../wicket-macro/"}
wicket-macro-support = { path = "../wicket-macro-support/"}
wicket-request = { path = "../wicket-request/"}
wicket-util = { path = "../wicket-util/"}
