[package]
name = "wicket-macro"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.117", features = ["full", "extra-traits"] }
quote = "1.0.45"
proc-macro2 = "1.0.106"
serde = {version = "1.0.228", features=["derive"]}
toml = "1.1.2"

wicket-macro-support = { path = "../wicket-macro-support/"}
proc-macro-crate = "3.5.0"

[features]
default = []

# Enable loading of html source files from disk on each access versus
# the file baked into the binary.
dev = []
